--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,7 +28,7 @@
                         </div>
                     </div>
                     <button type="submit" class="btn btn-primary" style="margin-left:115px;">登录</button>
-                    <button type="submit" class="btn btn-primary" style="margin-left:50px;">前去注册</button>
+                    <button type="submit" class="btn btn-primary" style="margin-left:50px;"><a href="/register">前去注册</a></button>
                     </form>
                 </div>
             </div>
