--- a/views/mobile-manager.ejs
+++ b/views/mobile-manager.ejs
@@ -7,6 +7,12 @@
   <title>Document</title>
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/index.css">
+  <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.min.css">
+  <style>
+    .active{
+      background: red;
+    }
+  </style>
 </head>
 <body>
 
