--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,40 +9,46 @@
     <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.min.css">;
 </head>
 <body>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 col-md-offset-4">
-                    <h2>XX - 后台管理系统注册</h2>
-        
-                    <form action="/users/register" method="POST" class="form-horizontal">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+                <h2>XX - 后台管理系统注册</h2>
+    
+                <form action="/users/register" method="POST" class="form-horizontal">
                     <div class="form-group">
                         <label class="control-label col-sm-4">用户名：</label>
                         <div class="col-sm-8">
-                        <input type="text" name="username" class="form-control" placeholder="请输入用户名">
+                            <input type="text" name="username" class="form-control" id="uname" placeholder="请输入用户名">
+                            <div class="red-col" id="name-reg">用户名长度应该在4-10个字符</div>
+                            <div class="red-col" id="unamecheck">用户名已注册</div>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label col-sm-4">密码：</label>
                         <div class="col-sm-8">
-                        <input type="password" name="password" class="form-control" placeholder="请输入密码">
+                            <input type="password" name="password" class="form-control" id="pwd" placeholder="请输入密码">
+                            <div class="red-col" id="pwd-reg">密码长度为6-12个字符，包含数字字母下划线</div>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label col-sm-4">确认密码：</label>
                         <div class="col-sm-8">
-                        <input type="password" name="repassword" class="form-control" placeholder="请再次输入密码">
+                            <input type="password" name="repassword" class="form-control" id="repwd" placeholder="请再次输入密码">
+                            <div class="red-col" id="repwd-reg">密码不一致</div>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label col-sm-4">昵称：</label>
                         <div class="col-sm-8">
-                        <input type="text" name="nickname" class="form-control" placeholder="请输入昵称">
+                            <input type="text" name="nickname" class="form-control" id="nickname" placeholder="请输入昵称">
+                            <div class="red-col" id="nick-reg">昵称长度应该在3-7个字符</div>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label col-sm-4">手机号码：</label>
                         <div class="col-sm-8">
-                        <input type="text" name="phone" class="form-control" placeholder="请输入手机号码">
+                            <input type="text" name="phone" class="form-control" id="phone" placeholder="请输入手机号码">
+                            <div class="red-col" id="phone-reg">输入手机号码不合法</div>
                         </div>
                     </div>
                     <div class="form-group">
@@ -52,15 +58,89 @@
                             <input type="radio" name="isAdmin" class="radIn" value="0" checked><span>否</span>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary" style="margin-left:88px;">提交注册</button>
-                    <button type="submit" class="btn btn-primary" style="margin-left:50px;">直接登录</button>
-                    </form>
-                </div>
+                    <button type="submit" id="sub" class="btn btn-primary" style="margin-left:88px;" disabled>提交注册</button>
+                    <button type="submit" class="btn btn-primary" style="margin-left:50px;"><a href="/login.html">直接登录</a></button>
+                </form>
             </div>
-        </div>      
+        </div>
     </div>
-
     <script src="/lib/jquery/jquery.min.js"></script>
     <script src="/lib/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
+<script>
+    var flag_1 = false;
+    var flag_2 = false;
+    var flag_3 = false;
+    var flag_4 = false;
+    var flag_5 = false;
+
+    $("#uname").blur(function(){
+        var nameReg = /^[a-zA-Z0-9_-]{4,10}$/;
+        if(!nameReg.test($("#uname").val())){
+            $('#name-reg').css('display','block');
+            flag_1 = false;
+        }else{
+            $('#name-reg').css('display','none');
+            flag_1 = true;
+        }
+        sub();
+    })
+
+    $("#pwd").blur(function(){
+        var pwdReg = /^\w{6,12}$/;
+        if(!pwdReg.test($("#pwd").val())){
+            $('#pwd-reg').css('display','block');
+            flag_2 = false;
+        }else{
+            $('#pwd-reg').css('display','none');
+            flag_2 = true;
+        }
+        sub();
+    })
+
+    $("#repwd").blur(function(){
+        if( $("#pwd").val() === $("#repwd").val() ){
+            $('#repwd-reg').css('display','none');
+            flag_3 = true;
+        }else{
+            $('#repwd-reg').css('display','block');
+            flag_3 = false;
+        }
+        sub();
+    })
+
+    $("#nickname").blur(function(){
+        var nicknameReg = /^[\u4e00-\u9fa5_a-zA-Z]{3,7}$/;
+        if(!nicknameReg.test($("#nickname").val())){
+            $('#nick-reg').css('display','block');
+            flag_4 = false;
+        }else{
+            $('#nick-reg').css('display','none');
+            flag_4 = true;
+        }
+        sub();
+    })
+
+    $("#phone").blur(function(){
+        var phoneReg = /^1(3|4|5|7|8)\d{9}$/;
+        if(!phoneReg.test($("#phone").val())){
+            $('#phone-reg').css('display','block');
+            flag_5 = false;
+        }else{
+            $('#phone-reg').css('display','none');
+            flag_5 = true;
+        }
+        sub();
+    })
+
+    function sub(){
+        if(flag_5&&flag_4&&flag_3&&flag_2&&flag_1){
+            $("#sub").removeAttr('disabled');
+        }else{
+            $("#sub").attr('disabled','disabled');
+        }
+    }
+
+
+</script>
